direct: bt tracker and src port

--- a/ACL4SSR.ini
+++ b/ACL4SSR.ini
@@ -21,7 +21,9 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/monlor/openclash-rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/monlor/openclash-rules/master/whitelist.ini
 ; Self: https://git.mczhengyi.top/zhengyi/clash-rules/raw/branch/main/rules-sets
 ; Autodesk
-ruleset=🎯 全球直连,https://git.mczhengyi.top/zhengyi/clash-rules/raw/branch/main/rules-sets/autodesk.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/justice2001/clash-rules/main/rules-sets/autodesk.list
+; 默认 51411-51416来源端口直连
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/justice2001/clash-rules/main/rules-sets/tracker.list
 ruleset=✅ OpenAI,https://raw.githubusercontent.com/monlor/openclash-rules/master/openai.ini
 ruleset=💰 虚拟钱包,https://raw.githubusercontent.com/monlor/openclash-rules/master/paypal.ini
 ruleset=💰 虚拟钱包,https://raw.githubusercontent.com/monlor/openclash-rules/master/wallet.ini
